--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -33,13 +33,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
-      - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
-        with:
-          source: ./dev/render_site.R  #on teste avec ça ?
-          destination: ./docs           #destination déjà indiquée dans le fichier yml
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+      - name: Build 
+        run: |
+          Rscript 'dev/render_site.R'
 
   # Deployment job
   deploy:
