--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -31,10 +31,13 @@ jobs:
        # 1. On récupère le contenu du dépôt
       - name: Checkout
         uses: actions/checkout@v3
+      - uses: r-lib/actions/setup-r@v2    #install R
+      - uses: r-lib/actions/setup-renv@v2   #install renv
+        
       - name: Setup Pages
         uses: actions/configure-pages@v3
-        #on a besoin d'installer les library geos sur la machine avant
-      - name: install geos
+        
+      - name: install geos    #on a besoin d'installer les library geos sur la machine avant
         run: |        
           sudo apt install libgeos-dev   
       - name: Build 
