--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2    #install R      
       
       - name: install geos    #on a besoin d'installer les library geos et rgdal sur la machine avant renv
-        run:  sudo apt-get install -y libgeos-dev   
+        run:  sudo apt-get install -y libgeos-dev libgdal-dev    
 
       - uses: r-lib/actions/setup-renv@v2   #install renv
         
