--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -33,8 +33,8 @@ jobs:
         uses: actions/checkout@v3
       - uses: r-lib/actions/setup-r@v2    #install R      
       
-      - name: install geos    #on a besoin d'installer les library geos et rgdal units sur la machine avant renv
-        run:  sudo apt-get install -y libgeos-dev libgdal-dev libudunits2-dev 
+      - name: install geos    #on a besoin d'installer les library geos et rgdal units textshaping  sur la machine avant renv
+        run:  sudo apt-get install -y libgeos-dev libgdal-dev libudunits2-dev libharfbuzz-dev libfribidi-dev
 
       - uses: r-lib/actions/setup-renv@v2   #install renv
         
